feat: TICKET-00000 added filter examples